--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<div class="header"> WE CARE FOR YOU AND HOPE YOU ARE SAFE!!!</div>
 	<ul>
 		<li><img src="logo2.png" style="margin-top: 4px; padding: 5px;"></li>
-		<li><a href="file:///C:/Users/GAUTAM%20VIBHA%20SANJAY/Desktop/CoronaSafe/index.html" style="background-color: #b3b3ff;">HOME</a></li>
-		<li class="Drop"><a href="file:///C:/Users/GAUTAM%20VIBHA%20SANJAY/Desktop/CoronaSafe/ImpC.html" class="Dropbtn" style="background-color: #ffcce0">Important Contacts</a>
+		<li><a href="https://github.com/divy111/Web/blob/main/index.html" style="background-color: #b3b3ff;">HOME</a></li>
+		<li class="Drop"><a href="https://github.com/divy111/Web/blob/main/ImpC.html" class="Dropbtn" style="background-color: #ffcce0">Important Contacts</a>
 			<div class="Dropdown">
 
 				<a href="In">All India</a>
@@ -37,10 +37,10 @@
 				<a href="Delhi">Delhi</a>
 			</div>
 		</li>
-		<li><a href="file:///C:/Users/GAUTAM%20VIBHA%20SANJAY/Desktop/CoronaSafe/Guide.html" style="background-color: #c6ffb3;">Guidelines</a></li>
+		<li><a href="https://github.com/divy111/Web/blob/main/Guide.html" style="background-color: #c6ffb3;">Guidelines</a></li>
 	
-		<li style="float: right;"><a href="file:///C:/Users/GAUTAM%20VIBHA%20SANJAY/Desktop/CoronaSafe/Contact.html" style="background-color: #ff4d4d;">ABOUT</a></li>
-		<li style="float: right;"><a href="file:///C:/Users/GAUTAM%20VIBHA%20SANJAY/Desktop/CoronaSafe/Story.html" style="background-color: #99d6ff">Your Story</a></li>
+		<li style="float: right;"><a href="https://github.com/divy111/Web/blob/main/Contact.html" style="background-color: #ff4d4d;">ABOUT</a></li>
+		<li style="float: right;"><a href="https://github.com/divy111/Web/blob/main/Story.html" style="background-color: #99d6ff">Your Story</a></li>
 	</ul>
 	<div class="header">Know About COVID-19 cases!!!</div>
 <div style="background-color: #e6ccff; border-radius: 50px 50px 50px 50px; border-top-color: transparent; margin-bottom: 60px;" >
